# memstack

./: .coveragerc  .env.example  .gitignore  .gitmodules  AGENTS.md  AI_ONE_PERSON_TEAM_GUIDE.md  CLAUDE.md  DEV_GUIDE.md  Dockerfile  IMPLEMENTATION_REPORT.md  Makefile  QUICKSTART.md  README.md  alembic.ini  architecture_diagram.md  commit_changes.sh  conftest.py  docker-compose.yml  domain_driven_design_hexagonal_arhictecture_python_rules.md  generate_key.py  litellm_config.yaml  package-lock.json  pyproject.toml  pytest.ini  test_bcrypt.py  verify_alembic.sh
.github/workflows/: ci.yml
.trae/documents/: Add Backend Tests to Increase Coverage _ 80%.md  Add Data Processing Status to Memory Table.md  Add E2E Tests with Playwright.md  Add Tests for New UI Components and Improve Coverage.md  Add Unit Tests for New Hexagonal Architecture.md  Analysis_ Graphiti Subgraph Implementation.md  Completed Data Processing Status Implementation.md  Comprehensive Test Coverage Plan (Target _= 80%).md  Create Database Reset Script.md  Decouple src from server directory.md  Drafting the _AI-Driven One-Person Team_ Guide.md  Enhance Graph Visualization with Graphiti Capabilities.md  Ensure Feature Parity for Memory Domain Refactoring.md  Filter fact_embedding from API responses.md  Filter name_embedding from Graphiti Service responses.md  Fix Deep Search Functionality.md  Fix E2E Test Failures.md  Fix E2E Tests and API Client Configuration.md  Fix Entity Summary Placeholder Issue.md  Fix Graph Maintenance Page Issues.md  Fix Graphiti add_episode Unpacking Error.md  Fix KeyError 'label' in get_subgraph.md  Fix Qwen Response Validation and Provider Selection Logic.md  Frontend Refactoring & Graphiti Integration Plan.md  Frontend Refactoring and Backend Enhancement Plan.md  Graphiti深度整合-实施总结.md  Graphiti深度整合-最终实施总结.md  Graphiti深度整合方案.md  Implement Persistent Redis Queue for Reliable Task Execution.md  MemStack Optimization & Feature Implementation Plan.md  Recreate Architecture Diagram in Markdown.md  Refactor E2E Tests & Enable Src Backend.md  Refactor Project to Hexagonal Architecture.md  Refactor Task System for Reliability and Extensibility.md  Refactor Threading Model for High Performance.md  Remove name_embedding from Graphiti API responses.md  Replace print with logging in Backend.md  Restore Servers & Fix E2E Tests for High Coverage.md  Schema Management Implementation Plan.md  Schema Status and Auto-Sync Implementation Plan.md  (+9 more)
alembic/: env.py
alembic/versions/: 20241231_1700-001_initial_schema_with_sse.py
docs/: ALEMBIC_MIGRATION_README.md  API_DOCUMENTATION.md  ARCHITECTURE_AUDIT.md  ARCHITECTURE_REFACTORING_COMPLETE.md  AUDIT_INDEX.md  AUDIT_SUMMARY.md  CHANGELOG_QWEN.md  DASHSCOPE_MIGRATION.md  ENV_VARIABLES_UNIFIED.md  IMPLEMENTATION_SUMMARY.md  QUICK_FIX_GUIDE.md  QWEN_INTEGRATION.md  QWEN_RERANKER_USAGE.md  README.md  REFACTORING_COMPLETE.md  REFACTORING_PROGRESS.md  TELEMETRY-MIGRATION.md  alembic_implementation_plan.md  alembic_migration_complete.md  alembic_usage_guide.md  api-reference.md  architecture.md  database_migration_tools_comparison.md  database_migrations.md  deployment.md  opentelemetry-guide.md  quickstart.md  sse_and_migrations_summary.md  sse_episode_implementation.md  sse_migration.md  sse_migration_quickstart.md  sse_session_fix.md  sse_testing_guide.md  startup-troubleshooting.md
docs/agents/: langgraph-agent.md
docs/graph/: add-fact.md  communities.md  custom-entity-edgs-type.md  graph-CRUD.md  graph-namespace.md  graph-search.md  llm-config.md
examples/: README.md  basic_usage.py  sdk_usage.py
migrations/: README.md  add_task_progress_fields.sql
scripts/: README.md  add_task_id_column.py  alembic_cli.py  alembic_setup.py  check_architecture.py  check_dataset.py  check_entities_simple.py  check_episodes.py  check_schema.py  check_task.py  cleanup_empty_episodes.py  clear_neo4j.py  create_dev_api_key.py  generate_test_data.py  generate_test_data.sh  get_api_key.sh  get_api_key_from_db.py  ingest_hf_data.py  init_db.py  inspect_graphiti.py  manage_migrations.py  migrate_add_task_progress.py  reset_databases.py  reset_db.py  run_alembic.py  test_alembic.py  test_csl_extraction.py  test_eventsource.py  test_qwen_extraction.py  test_sse.py  test_sse_detailed.py  test_sse_flow.py
sdk/python/: README.md  pyproject.toml
sdk/python/memstack/: __init__.py  async_client.py  client.py  exceptions.py  models.py
sdk/python/vip_memory/: __init__.py  async_client.py  client.py  exceptions.py  models.py
server/: __init__.py  auth.py  config.py  database.py  db_models.py  debug_utils.py  exceptions.py  logging_config.py  main.py  telemetry.py  worker.py
server/api/: __init__.py  ai_tools.py  auth.py  communities.py  data_export.py  enhanced_episodes.py  entities.py  episodes.py  episodes_list.py  health.py  maintenance.py  memories.py  memory.py  memos.py  projects.py  recall.py  schema.py  search_enhanced.py  tasks.py  tenants.py
server/llm_clients/: __init__.py  openai_client.py  openai_embedder.py  openai_reranker_client.py  qwen_client.py  qwen_embedder.py  qwen_reranker_client.py
server/models/: __init__.py  auth.py  entity.py  enums.py  episode.py  memory.py  memory_app.py  memos.py  project.py  recall.py  schema.py
server/services/: __init__.py  (+2 more)
src/: worker.py
tests/: conftest.py  integration_auth.py  integration_memories.py  integration_projects.py  integration_tenants.py  test_api.py  test_api_data_export.py  test_api_episodes.py  test_api_maintenance.py  test_api_memories.py  test_api_memos.py  test_api_projects.py  test_api_recall.py  test_api_tenants.py  test_auth.py  test_graphiti_service_filters.py  test_integration_auth.py  test_integration_memories.py  test_integration_projects.py  test_integration_tenants.py  test_llm_clients.py  test_models.py  test_sdk.py  test_service.py  test_service_comprehensive.py  test_service_extended.py
web/: .eslintrc.cjs  Dockerfile  README.md  eslint.config.js  index.html  nginx.conf  package-lock.json  package.json  playwright.config.ts  pnpm-lock.yaml  vite.config.ts  vitest.config.ts
(+362 files in other folders)
